Fix clipping on story hero titles

--- a/src/app/stories/_stories.hero.styl
+++ b/src/app/stories/_stories.hero.styl
@@ -59,8 +59,8 @@ article.story .hero {
   h1 {
     font-weight: 300;
     font-size: 22px; // TODO
-    line-height: 24px; // TODO
-    max-height: 72px;
+    line-height: 29px; // TODO
+    max-height: 87px;
     overflow: hidden;
     color: inherit;
   }
